Adicionou o servico d para retorno desconto

--- a/microsservicos-aula-1/a/templates/home.html
+++ b/microsservicos-aula-1/a/templates/home.html
@@ -86,7 +86,7 @@
             </div>
         </form>
     {{ else}}
-        <h4>Resultado da operação: {{ .Status }}</h4>
+        <h4>Resultado da operação: {{ .Status }}, Desconto: {{ .Discount }}</h4>
     {{end}}
 
     <footer class="my-5 pt-5 text-muted text-center text-small">
